(library
 (name ppx_let_fun_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base)
 (libraries base expect_test_helpers_core.expect_test_helpers_base tilde_f)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_here ppx_let ppx_sexp_conv ppx_sexp_value ppx-let-fun)))
